--- a/Labs/module-1_labs/01_python/04_lab-functional-programming/your-code/main.ipynb
+++ b/Labs/module-1_labs/01_python/04_lab-functional-programming/your-code/main.ipynb
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "0\n"
      ]
     }
    ],
@@ -159,11 +159,12 @@
     "    for i in iterator:\n",
     "        if i%2 == 0:\n",
     "            return i\n",
+    "    return 0\n",
     "    \n",
     "iterator1 = iter([1,2,3,4])\n",
-    "#iterator2 = iter([1,3])\n",
+    "iterator2 = iter([1,3])\n",
     "\n",
-    "print(divisible2(iterator1))"
+    "print(divisible2(iterator2))"
    ]
   },
   {
